// ============================================================
// FULL ORDERMITRA SCHEMA (PHASES 1 - 5)
// ============================================================
// This schema encompasses the complete vision: Core Ordering (Phase 1),
// Retention/Loyalty (Phase 2), Kitchen Display/Scale (Phase 3), and
// Enterprise Multi-Outlet Brands (Phase 4/5).

generator client {
  provider = "prisma-client-js"
}

datasource db {
  provider = "postgresql"
  url      = env("DATABASE_URL")
}

// ============================================================
// PHASE 4/5: ENTERPRISE IDENTITY (Brand & Multi-Outlet)
// ============================================================

model Brand {
  id              String      @id @default(cuid())
  name            String
  slug            String      @unique
  enterprisePlan  String      @default("STANDARD")
  createdAt       DateTime    @default(now())
  
  outlets         Outlet[]
  globalMenus     GlobalMenu[]

  @@map("brands")
}

model Outlet {
  id              String      @id @default(cuid())
  brandId         String      // Replaces simple Restaurant concept
  name            String
  city            String?
  currency        String      @default("INR")
  isActive        Boolean     @default(true)

  brand           Brand       @relation(fields: [brandId], references: [id])
  
  staff           Staff[]
  menuCategories  MenuCategory[]
  menuItems       MenuItem[]
  tables          Table[]
  orders          Order[]
  promotions      Promotion[]
  kitchenStations KitchenStation[]
  loyaltyPrograms LoyaltyProgram[]

  @@map("outlets")
}

// ============================================================
// PHASE 3: ADVANCED STAFF & KITCHEN ROUTING
// ============================================================

model Staff {
  id              String      @id @default(cuid())
  outletId        String
  phone           String
  name            String
  role            StaffRole   @default(WAITER)
  
  outlet          Outlet      @relation(fields: [outletId], references: [id])
  shifts          Shift[]

  @@unique([outletId, phone])
  @@map("staff")
}

enum StaffRole {
  OWNER
  MANAGER
  CHEF
  WAITER
}

model Shift {
  id              String      @id @default(cuid())
  staffId         String
  clockIn         DateTime    @default(now())
  clockOut        DateTime?
  
  staff           Staff       @relation(fields: [staffId], references: [id])
  @@map("shifts")
}

model KitchenStation {
  id              String      @id @default(cuid())
  outletId        String
  name            String      // e.g., "Grill", "Beverages"
  
  outlet          Outlet      @relation(fields: [outletId], references: [id])
  orderItems      OrderItem[]

  @@map("kitchen_stations")
}

// ============================================================
// PHASE 1 & 4: MENU MANAGEMENT (Global vs Local)
// ============================================================

model GlobalMenu {
  id              String      @id @default(cuid())
  brandId         String
  name            String
  
  brand           Brand       @relation(fields: [brandId], references: [id])
  items           MenuItem[]

  @@map("global_menus")
}

model MenuCategory {
  id              String      @id @default(cuid())
  outletId        String
  name            String
  displayOrder    Int         @default(0)
  
  outlet          Outlet      @relation(fields: [outletId], references: [id])
  items           MenuItem[]

  @@map("menu_categories")
}

model MenuItem {
  id              String      @id @default(cuid())
  outletId        String
  categoryId      String
  globalMenuId    String?     // If pushed down from Brand level
  name            String
  price           Decimal     @db.Decimal(10, 2)
  isVeg           Boolean     @default(true)
  isAvailable     Boolean     @default(true)
  
  outlet          Outlet      @relation(fields: [outletId], references: [id])
  category        MenuCategory @relation(fields: [categoryId], references: [id])
  globalMenu      GlobalMenu?  @relation(fields: [globalMenuId], references: [id])
  orderItems      OrderItem[]

  @@map("menu_items")
}

// ============================================================
// PHASE 1 & 3: TABLES & ZONES
// ============================================================

model Table {
  id              String      @id @default(cuid())
  outletId        String
  zoneId          String?     // Phase 3 Waiter Zones
  tableNumber     String
  qrCodeUrl       String?
  
  outlet          Outlet      @relation(fields: [outletId], references: [id])
  zone            WaiterZone? @relation(fields: [zoneId], references: [id])
  orders          Order[]

  @@map("tables")
}

model WaiterZone {
  id              String      @id @default(cuid())
  outletId        String
  name            String      // e.g., "Patio", "Main Floor"
  
  tables          Table[]

  @@map("waiter_zones")
}

// ============================================================
// PHASE 2: CUSTOMERS, LOYALTY, REVIEWS
// ============================================================

model Customer {
  id              String      @id @default(cuid())
  phone           String      @unique
  name            String?
  totalOrders     Int         @default(0)
  
  orders          Order[]
  reviews         Review[]
  stamps          LoyaltyStamp[]
  consents        ConsentRecord[]

  @@map("customers")
}

model LoyaltyProgram {
  id              String      @id @default(cuid())
  outletId        String
  stampsRequired  Int         @default(10)
  rewardName      String
  
  outlet          Outlet      @relation(fields: [outletId], references: [id])
  stamps          LoyaltyStamp[]

  @@map("loyalty_programs")
}

model LoyaltyStamp {
  id              String      @id @default(cuid())
  programId       String
  customerId      String
  currentStamps   Int         @default(0)
  
  program         LoyaltyProgram @relation(fields: [programId], references: [id])
  customer        Customer       @relation(fields: [customerId], references: [id])

  @@unique([programId, customerId])
  @@map("loyalty_stamps")
}

model Review {
  id              String      @id @default(cuid())
  customerId      String
  orderId         String      @unique
  rating          Int         // 1 to 5
  comment         String?
  
  customer        Customer    @relation(fields: [customerId], references: [id])
  order           Order       @relation(fields: [orderId], references: [id])

  @@map("reviews")
}

model Promotion {
  id              String      @id @default(cuid())
  outletId        String
  code            String
  discountValue   Decimal     @db.Decimal(10, 2)
  
  outlet          Outlet      @relation(fields: [outletId], references: [id])

  @@map("promotions")
}

// ============================================================
// PHASE 1: CORE ORDERING & PAYMENTS
// ============================================================

model Order {
  id              String      @id @default(cuid())
  outletId        String
  customerId      String?
  tableId         String?
  status          OrderStatus @default(RECEIVED)
  
  // Financials
  subtotal        Decimal     @db.Decimal(10, 2)
  gstAmount       Decimal     @default(0) @db.Decimal(10, 2)
  discountAmount  Decimal     @default(0) @db.Decimal(10, 2)
  totalAmount     Decimal     @db.Decimal(10, 2)
  
  idempotencyKey  String      @unique
  createdAt       DateTime    @default(now())
  
  outlet          Outlet      @relation(fields: [outletId], references: [id])
  customer        Customer?   @relation(fields: [customerId], references: [id])
  table           Table?      @relation(fields: [tableId], references: [id])
  items           OrderItem[]
  payment         Payment?
  review          Review?

  @@map("orders")
}

enum OrderStatus {
  RECEIVED
  PREPARING
  READY
  BILLED
  COMPLETED
}

model OrderItem {
  id              String      @id @default(cuid())
  orderId         String
  menuItemId      String
  stationId       String?     // Routed to specific kitchen station (Phase 3)
  quantity        Int
  unitPrice       Decimal     @db.Decimal(10, 2)
  totalPrice      Decimal     @db.Decimal(10, 2)
  status          ItemStatus  @default(QUEUED)
  
  order           Order       @relation(fields: [orderId], references: [id])
  menuItem        MenuItem    @relation(fields: [menuItemId], references: [id])
  station         KitchenStation? @relation(fields: [stationId], references: [id])

  @@map("order_items")
}

enum ItemStatus {
  QUEUED
  COOKING
  READY
}

model Payment {
  id              String      @id @default(cuid())
  orderId         String      @unique
  amount          Decimal     @db.Decimal(10, 2)
  method          PaymentMethod @default(UPI)
  status          PaymentStatus @default(PENDING)
  
  providerName    String?     // e.g. 'razorpay'
  providerTxnId   String?     // webhook tracking id

  order           Order       @relation(fields: [orderId], references: [id])

  @@map("payments")
}

enum PaymentMethod {
  UPI
  CARD
  CASH
  WALLET
}

enum PaymentStatus {
  PENDING
  COMPLETED
  FAILED
}

model ConsentRecord {
  id              String      @id @default(cuid())
  customerId      String
  purpose         String      // e.g., "MARKETING", "WHATSAPP_RECEIPTS"
  granted         Boolean     @default(true)
  
  customer        Customer    @relation(fields: [customerId], references: [id])

  @@map("consent_records")
}
